--- a/netlify.toml
+++ b/netlify.toml
@@ -13,13 +13,13 @@ LANDING_PAGE = "home"
 LANDING_TITLE = "I love obsidian-zola! 💖"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
-REPO_URL = "https://github.com/pahkgh/fin"
+REPO_URL = "https://github.com/pahkgh/fiZP-pages-pahk"
 # (Optional) Site title in navbar
 SITE_TITLE = "Chaegscang📂"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
-SITE_URL = "https://dazzling-starburst-6223fa.netlify.app"
+SITE_URL = "https://starlit-marzipan-e8ed0e.netlify.app"
 # (Optional) Site Timezone
 TIMEZONE = "Asia/Seoul"
 ZOLA_VERSION = "0.16.1"
