--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,51 @@
 [build]
-command = "rm -rf __obsidian __site && mkdir __obsidian && mv * __obsidian || true && git clone -b dev https://github.com/ppeetteerrs/obsidian-zola.git __site && __site/run.sh"
+command = "rm -rf __obsidian __site && mkdir __obsidian && mv * __obsidian || true && git clone https://github.com/Yarden-zamir/obsidian-zola-plus.git __site && __site/run.sh"
 publish = "public"
 
 [build.environment]
-FOOTER = "Proudly "
-GANALYTICS = ""
-GRAPH_LINK_REPLACE = "y"
+# (Optional) Text in landing page button
+LANDING_BUTTON = "Click to see more questionable ideas 👆"
+# (Optional) Site description on landing page
+LANDING_DESCRIPTION = "Never do something in ten minutes if you can automate it in ten hours"
+# (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
+LANDING_PAGE = "home"
+# (Optional) Site title on landing page
+LANDING_TITLE = "🥔"
+PYTHON_VERSION = "3.8"
+# (REQUIRED) Site repo URL
+REPO_URL = "https://github.com/pahkgh/ZP-pages-pahk"
+# (Optional) Site title in navbar
+SITE_TITLE = "an open sourced 🧠"
+# (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
+SITE_TITLE_TAB = ""
+# (REQUIRED) Netlify site URL
+SITE_URL = "https://https://starlit-marzipan-e8ed0e.netlify.app"
+# (Optional) Site Timezone
+TIMEZONE = "Asia/Seoul"
+ZOLA_VERSION = "0.16.1"
+# (Optional, default title) How to sort notes inside each section on the right sidebar ("date" or "title"). Subsections on side bar are sorted by title, the sort order cannot be changed.
+SORT_BY = "title"
+# (Optional) Google Analytics Measurement ID
+GANALYTICS = "G-9EJCNPXBF6"
+# (Optional, default true) Slugify URLs. Put "" to disable.
+SLUGIFY = "y"
+# (Optional, default true) Shows knowledge graph on home page. Put "" to disable.
+HOME_GRAPH = "y"
+# (Optional, default true) Shows knowledge graph on every page. Put "" to disable.
+PAGE_GRAPH = "y"
+# (Optional, default true) Whether to use standard Markdown strict line breaks.
+STRICT_LINE_BREAKS = ""
+# (Optional, default false) Whether sidebar sections should be collapsed by default.
+SIDEBAR_COLLAPSED = ""
+# (Optional, default blank) Additional footer content.
+FOOTER = ""
+# (Optional, default main) Root section name.
+ROOT_SECTION_NAME = "me"
+COMMENTS_GISCUSS = "y"
+EDIT_PAGE = "y"
+EDIT_PAGE_BUTTON_TEXT = "Change my mind!"
+LOCAL_GRAPH = "y"
+# (Optional) visjs graph options. Can remove if desired.
 GRAPH_OPTIONS = """
         {
         	nodes: {
@@ -32,49 +72,15 @@ GRAPH_OPTIONS = """
         	},
         	interaction: {
         		hover: true,
+				multiselect: true,
         	},
         	height: "100%",
         	width: "100%",
         	physics: {
         		solver: "repulsion",
         	},
+			layout: {
+				randomSeed: 123, 
+			},
         }
-        """
-HOME_GRAPH = "y"
-LANDING_BUTTON = "<span class='shake-rotate shake-freeze'>Have a look?</span>"
-LANDING_DESCRIPTION = "<div style='margin-bottom: 1rem; margin-top: -3rem;'>My physical brain is <div style='font-size: 4rem; display: inline-block' class='animate__animated animate__pulse animate__infinite '>💤 </div> but my digital brain is active.</div>"
-LANDING_PAGE = "home"
-LANDING_TITLE = "<span class='hvr-grow'>Hi, I'm Peter</span>"
-LOCAL_GRAPH = "y"
-PAGE_GRAPH = "y"
-PYTHON_VERSION = "3.8"
-REPO_URL = "https://github.com/ZP-pages-pahk"
-ROOT_SECTION_NAME = "root"
-SITE_TITLE = "Peter's 2<sup>nd</sup> <span class='hvr-pulse'>🧠</span>"
-SITE_TITLE_TAB = "Peter's Second 🧠"
-SITE_URL = "https://starlit-marzipan-e8ed0e.netlify.app/"
-SLUGIFY = "y"
-STRICT_LINE_BREAKS = "y"
-TIMEZONE = "Asia/Seoul"
-ZOLA_VERSION = "0.15.2"
-
-[[plugins]]
-package = "netlify-plugin-submit-sitemap"
-
-[plugins.inputs]
-
-# The base url of your site (optional, default = main URL set in Netlify)
-baseUrl = "https://starlit-marzipan-e8ed0e.netlify.app/"
-
-# Path to the sitemap URL (optional, default = /sitemap.xml)
-sitemapPath = "/sitemap.xml"
-
-# Time in seconds to not submit the sitemap after successful submission
-ignorePeriod = 0
-
-# Enabled providers to submit sitemap to (optional, default = 'google', 'bing', 'yandex'). Possible providers are currently only 'google', 'bing', 'yandex'.
-providers = [
-  "google",
-  "bing",
-  "yandex",
-]  
+        """  
